--- a/lucentrp-website/ClientApp/src/index.css
+++ b/lucentrp-website/ClientApp/src/index.css
@@ -44,6 +44,7 @@ html,body, #root {
     min-height: 100vh;
     min-width: var(--min-content-width);
     width: 100%;
+    overflow-x: hidden
 }
 
 a {
